--- a/src/frontend/src/app/Admin/users/users.component.css
+++ b/src/frontend/src/app/Admin/users/users.component.css
@@ -49,10 +49,73 @@ input[type='search']{padding: 10px;}
     background-color: white;
     width: 90%;
     padding: 10px;
+    border-radius: 10px;
   }
   .edit{border: none;}
   .edit img{ width: 15px; height: 15px;}
 
+
+  th, td {
+    border: 2px solid rgb(194, 192, 192);
+  }
+  th{
+    text-align: center;
+   }
+  th.exclude, td.exclude {
+    border: none; 
+    background-color: white;
+  }
+  .clearbutton{
+    border: none;
+  background-color: #727272;
+  padding: 8px;
+  border-radius: 5px;
+  color: aliceblue;
+  transition: 0.3s ease-in-out;
+  }
+  .clearbutton:hover{  background-color: #646262;
+  }
+.close-button,
+.close-button1,
+.close-button2{
+  height: 45px;
+  width: 45px;
+  cursor: pointer;
+  float: right;
+  font-size: 28px;
+  background-color: #cccccca4;
+  border-radius: 100%;
+  display: grid;
+  place-content: center;
+  position: absolute;
+  right: -30px;
+  top: -30px;
+}
+.close-button:hover,
+.close-button1:hover,
+.close-button2:hover {
+  background-color: #ccccccb4;
+}
+ .modal_for_search button,.modal button{
+  border: none;
+  background-color: #01bfbf;
+  padding: 3px;
+  border-radius: 5px;
+  margin-top: 10px;
+  color: aliceblue;
+}
+.modal_for_search button:hover,.modal button:hover{background-color: #01a9a9;}
+.modal_for_search input ,.modal input{
+  border-radius: 7px;
+  border: 1px solid #b1b1b1;
+  padding: 2px;
+}
+.modal_for_search label ,.modal input{font-weight: bold;}
+.modal h3{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
 
 
 
