--- a/src/frontend/src/app/Admin/users/users.component.html
+++ b/src/frontend/src/app/Admin/users/users.component.html
@@ -4,6 +4,8 @@
         <button class="clearbutton" (click)="CleanSearchForm()" *ngIf="search_data_id.id || search_data_id.email 
         || search_data_id.password || search_data_id.role">Очистити пошук</button>
         <button class="search" (click)="OpenSearchForm()"> <img src="search.png" alt=""> Пошук</button>
+        <button class="add" (click)="OpenAddForm()"> <img src="add.png" alt="/"> Додати адміна</button>
+
    
     </div>
 
@@ -72,4 +74,30 @@
          <button (click)="closeSearch()">Знайти</button>
     </div>
   </div>
+
+  <div *ngIf="addform" class="modal_for_addadmin">
+    <div class="modal-content-addadmin">
+      <span (click)="closeAdd()" class="close-button">&times;</span>
+      <form (ngSubmit)="register()" class="registration-form">
+        <div class="form-group">
+          <label for="email">Електронна пошта:</label>
+          <input id="email" [(ngModel)]="emailadmin" name="email" type="email" required placeholder="Електронна пошта">
+        </div>
+        <div class="form-group">
+          <label for="password">Пароль:</label>
+          <input id="password" [(ngModel)]="password" name="password" type="password" required placeholder="Пароль">
+        </div>
+        <div class="form-group">
+          <label for="passwordAgain">Підтвердіть пароль:</label>
+          <input id="passwordAgain" [(ngModel)]="passwordAgain" name="passwordAgain" type="password" required placeholder="Підтвердіть пароль">
+        </div>
+  
+        <div *ngIf="loading" class="spinner"></div>
+  
+        <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+        <button type="submit" class="btn" [disabled]="loading">Зареєструвати адміна</button>
+      </form>
+    </div>
+  </div>
+  
 </div>
