Зроблений  весь функціонал адмін панелі, але є пару недоліків в Блозі

--- a/src/frontend/src/app/Admin/header/header.component.html
+++ b/src/frontend/src/app/Admin/header/header.component.html
@@ -4,6 +4,7 @@
   
       <ul>
         <div class="Descktop-admin">
+        <li class="nav-item1 "><a class="nav-link1" routerLink='/admin'  routerLinkActive="active">Адмінпанель</a></li>
         <li class="nav-item "><a class="nav-link" routerLink='shelteradmin'  routerLinkActive="active">Притулки</a></li>
         <li class="nav-item "><a class="nav-link" routerLink='tabel-animals'  routerLinkActive="active">Тваринки</a></li>
         <li class="nav-item "><a class="nav-link" routerLink='usersadmin'  routerLinkActive="active">Користувачі</a></li>
