--- a/src/frontend/src/app/Admin/header/header.component.css
+++ b/src/frontend/src/app/Admin/header/header.component.css
@@ -42,6 +42,13 @@ nav ul {
 } */
 
 nav ul li  { display: inline-block;  margin-right: 30px;z-index: 1;}
+
+nav ul .nav-item1  {display: inline-block;  margin-right: 30px;z-index: 1;}
+nav ul .nav-item1 .nav-link1  {text-decoration: none; color: #000000;  font-size: 1rem; }
+
+nav ul .nav-item1 .nav-link1:hover  {text-decoration: none; color: #ffffff; font-size: 1rem;   transition: 0.2s ease-in-out;}
+
+
 nav ul li a  {
   text-decoration: none;
   color: #ffffff;
